--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ Design by TEMPLATED
 http://templated.co
 Released for free under the Creative Commons Attribution License
 
-Name       : Scenic Office 
+Name       : Scenic Office
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20130602
@@ -26,14 +26,14 @@ Released   : 20130602
 <div id="wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Scenic Office</a></h1>
+			<h1><a href="#">Act4Kidz</a></h1>
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="#" accesskey="2" title="">Portfolio</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
+				<li><a href="#" accesskey="2" title="">About</a></li>
+				<li><a href="#" accesskey="3" title="">Get Involved</a></li>
+				<li><a href="#" accesskey="4" title="">The Issue</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
