Updated nav bar menus

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,9 @@ Released   : 20130602
 				<li><a href="#" accesskey="2" title="">About</a></li>
 				<li><a href="#" accesskey="3" title="">Get Involved</a></li>
 				<li><a href="#" accesskey="4" title="">The Issue</a></li>
-				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+				<li><a href="#" accesskey="5" title="">Sponsor</a></li>
+				<li><a href="#" accesskey="6" title="">Lottery</a></li>
+				<li><a href="#" accesskey="7" title="">Contact Us</a></li>
 			</ul>
 		</div>
 	</div>
