--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,13 @@ Released   : 20130602
 		</div>
 		<div id="menu">
 			<ul>
+				<li><a href="#" accesskey="2" title="">Subscribe</a></li>
+				<li id="donate_menu"><a href="#" accesskey="3" title="">Donate</a></li>
+			</ul>
+		</div>
+		<br>
+		<div id="menu">
+			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
 				<li><a href="#" accesskey="2" title="">About</a></li>
 				<li><a href="#" accesskey="3" title="">Get Involved</a></li>
