--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,16 @@ Released   : 20130602
 </head>
 <body>
 <div id="wrapper">
-	<div id="header" class="container">
+	<div id="header" class="container_head">
 		<div id="logo">
 			<h1><a href="#">Act4Kidz</a></h1>
 		</div>
-		<div id="menu">
+		<div id="logo_menu">
 			<ul>
-				<li><a href="#" accesskey="2" title="">Subscribe</a></li>
-				<li id="donate_menu"><a href="#" accesskey="3" title="">Donate</a></li>
+				<li><a href="#" accesskey="1" title="">Subscribe</a></li>
+				<li id="donate_menu"><a href="#" accesskey="2" title="">Donate</a></li>
 			</ul>
 		</div>
-		<br>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Home</a></li>
@@ -47,7 +46,7 @@ Released   : 20130602
 			</ul>
 		</div>
 	</div>
-	<div id="page" class="container">
+	<div id="page" class="container_body">
 		<div id="content">
 			<div class="article borders">
 				<div class="title">
