Update - Logo Menu done ish

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,25 @@
   <body>
     <div id="wrapper">
     	<div id="header">
-    		<div id="logo">
-    			<h1><a href="#">Act4Kidz</a></h1>
-        </div>
-        <div id="logo_menu">
-          <ul>
-    				<li><a href="#" title="">Subscribe</a></li>
-    				<li><a href="#" title="">Donate</a></li>
-    			</ul>
+    		<div id="logo_bar">
+          <div id="logo_img">
+            <h1>This is a logo</h1>
+          </div>
+          <div id="logo_title">
+            <h1><a href="#">Act4Kidz</a></h1>
+          </div>
+          <div id="logo_menu">
+            <div class="button_default">
+              <ul class="link">
+        				<li><a href="#" title="">Subscribe</a></li>
+        			</ul>
+            </div>
+            <div class="button_donate" class="button_default">
+              <ul class="link">
+        				<li><a href="#" title="">Donate</a></li>
+        			</ul>
+            </div>
+          </div>
     		</div>
     		<div id="navbar">
     			<ul>
@@ -27,9 +38,9 @@
     			</ul>
     		</div>
     	</div>
-    	<div id="page" class="container_body">
+    	<div id="page">
     		<div id="content">
-    			<div class="article borders">
+    			<div>
     				<div class="title">
     					<h2>Welcome to our website</h2>
     					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
@@ -86,9 +97,7 @@
     		</div>
     	</div>
     </div>
-    <div id="footer-wrapper">
-    </div>
-    <div id="copyright" class="container">
+    <div id="copyright">
     	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
     </div>
   </body>
