--- a/src/index.html
+++ b/src/index.html
@@ -26,16 +26,22 @@
             </div>
           </div>
     		</div>
-    		<div id="navbar">
-    			<ul>
-    				<li class="current_page"><a href="#" title="">Home</a></li>
-    				<li><a href="#" title="">About</a></li>
-    				<li><a href="#" title="">Get Involved</a></li>
-    				<li><a href="#" title="">The Issue</a></li>
-    				<li><a href="#" title="">Sponsor</a></li>
-    				<li><a href="#" title="">Lottery</a></li>
-    				<li><a href="#" title="">Contact Us</a></li>
-    			</ul>
+    		<div class="navbar">
+          <ul class="navbar">
+            <li class="navbar"><a href="#home">Home</a></li>
+            <li class="navbar"><a href="#about">About</a></li>
+            <li class="navbar"><a href="#contacts">Contacts</a></li>
+            <li class="navbar"><a href="#donations">Donations</a></li>
+            <li class="navbar" class="dropdown">
+              <a href="javascript:void(0)" class="dropbtn">Services</a>
+              <div class="dropdown-content">
+                <a href="#">Therapy Services</a>
+                <a href="#">Family Intervention</a>
+                <a href="#">Education Services</a>
+                <a href="#">Residential Services</a>
+              </div>
+            </li>
+          </ul>
     		</div>
     	</div>
     	<div id="page">
