--- a/src/Old Files/Act For Kids Navigation Bar.html
+++ b/src/Old Files/Act For Kids Navigation Bar.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Act For Kids Navigation Bar.css"
+	<link rel="stylesheet" type="text/css" href="Act For Kids Navigation Bar.css">
 </head>
 <body>
-
 <ul id=navbar>
   <li><a href="#home">Home</a></li>
   <li><a href="#about">About</a></li>
@@ -20,7 +19,5 @@
     </div>
   </li>
 </ul>
-
-
 </body>
 </html>
