--- a/src/index.html
+++ b/src/index.html
@@ -27,20 +27,12 @@
           </div>
     		</div>
     		<div class="navbar">
-          <ul class="navbar">
+          <ul id="navbar" class="navbar">
             <li class="navbar"><a href="#home">Home</a></li>
             <li class="navbar"><a href="#about">About</a></li>
             <li class="navbar"><a href="#contacts">Contacts</a></li>
             <li class="navbar"><a href="#donations">Donations</a></li>
-            <li class="navbar" class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Services</a>
-              <div class="dropdown-content">
-                <a href="#">Therapy Services</a>
-                <a href="#">Family Intervention</a>
-                <a href="#">Education Services</a>
-                <a href="#">Residential Services</a>
-              </div>
-            </li>
+            <li class="navbar"><a href="#services">Services</a></li>
           </ul>
     		</div>
     	</div>
@@ -49,7 +41,8 @@
     			<div>
     				<div class="title">
     					<h2>Welcome to our website</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
     			</div>
