--- a/src/Services.html
+++ b/src/Services.html
@@ -63,21 +63,21 @@
     			<div class="article">
     				<div class="title">
     					<h2>Integrated Therapy Service</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    					<span class="byline">Therapeutic Service for childfren,young people, families and/or carers</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
 				<div class="article">
     				<div class="title">
     					<h2>Intensive Family Support</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    					<span class="byline">Provides Case Management Support</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
 				<div class="article">
     				<div class="title">
     					<h2>Early Education Program (EEP)</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    					<span class="byline">Educational</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
