--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="wrapper">
-    	<div id="header">
+      <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
             <h1>This is a logo</h1>
@@ -27,20 +27,12 @@
           </div>
     		</div>
     		<div class="navbar">
-          <ul class="navbar">
+          <ul id="navbar" class="navbar">
             <li class="navbar"><a href="#home">Home</a></li>
             <li class="navbar"><a href="#about">About</a></li>
             <li class="navbar"><a href="#contacts">Contacts</a></li>
             <li class="navbar"><a href="#donations">Donations</a></li>
-            <li class="navbar" class="dropdown">
-              <a href="javascript:void(0)" class="dropbtn">Services</a>
-              <div class="dropdown-content">
-                <a href="#">Therapy Services</a>
-                <a href="#">Family Intervention</a>
-                <a href="#">Education Services</a>
-                <a href="#">Residential Services</a>
-              </div>
-            </li>
+            <li class="navbar"><a href="#services">Services</a></li>
           </ul>
     		</div>
     	</div>
