--- a/src/About.html
+++ b/src/About.html
@@ -6,36 +6,36 @@
   <body>
     <div id="wrapper">
       <div id="header">
-    		<div id="logo_bar">
+        <div id="logo_bar">
           <div id="logo_img">
             <h1>This is a logo</h1>
           </div>
           <div id="logo_title">
-            <h1><a href="#">Act4Kidz</a></h1>
+            <h1><a href="index.html">Act4Kidz</a></h1>
           </div>
           <div id="logo_menu">
             <div class="button_default">
               <ul class="link">
-        				<li><a href="#" title="">Subscribe</a></li>
-        			</ul>
+                <li><a href="#" title="">Subscribe</a></li>
+              </ul>
             </div>
             <div class="button_donate" class="button_default">
               <ul class="link">
-        				<li><a href="#" title="">Donate</a></li>
-        			</ul>
+                <li><a href="donate.html" title="">Donate</a></li>
+              </ul>
             </div>
           </div>
-    		</div>
-    		<div class="navbar">
+        </div>
+        <div class="navbar">
           <ul id="navbar" class="navbar">
-            <li class="navbar"><a href="#home">Home</a></li>
-            <li class="navbar"><a href="#about">About</a></li>
-            <li class="navbar"><a href="#contacts">Contacts</a></li>
-            <li class="navbar"><a href="#donations">Donations</a></li>
-            <li class="navbar"><a href="#services">Services</a></li>
+            <li class="navbar"><a href="index.html">Home</a></li>
+            <li class="navbar"><a href="about.html">About</a></li>
+            <li class="navbar"><a href="contact.html">Contacts</a></li>
+            <li class="navbar"><a href="donate.html">Donations</a></li>
+            <li class="navbar"><a href="services.html">Services</a></li>
           </ul>
-    		</div>
-    	</div>
+        </div>
+      </div>
     	<div id="page">
     		<div id="content">
     			<div>
