--- a/src/Services.html
+++ b/src/Services.html
@@ -77,14 +77,14 @@
 				<div class="article">
     				<div class="title">
     					<h2>Early Education Program (EEP)</h2>
-    					<span class="byline">Educational</span> </div>
+    					<span class="byline">Educational intervention service for kids struggling to start school due to abuse or neglect</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
 				<div class="article">
     				<div class="title">
     					<h2>SafeKIDS</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    					<span class="byline">Provides safe and culturally appropriate home environments for kids</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
