--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     	<div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+            <img id="logo_img" src="images\logo.png" alt="ACT4KIDZ Logo"/>
           </div>
           <div id="logo_title">
             <h1><a href="index.html">Act4Kidz</a></h1>
