--- a/src/donate.html
+++ b/src/donate.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon">
     <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
   </head>
