--- a/src/About.html
+++ b/src/About.html
@@ -8,14 +8,14 @@
       <div id="header">
         <div id="logo_bar">
           <div id="logo_img">
-          <img src="bear logo.png" alt="bear logo" height=100px width=100px /img><img src="title.png" alt="title" height=100px width=200px /img>
+          <img src="bear logo.png" alt="bear logo" height=100px width=100px /img>
           </div>
           <div id="logo_title">
-<<<<<<< HEAD
+
             <h1><a href="#"></a></h1>
-=======
-            <h1><a href="index.html">Act4Kidz</a></h1>
->>>>>>> 6f4622d799052f61a3355979ef25944ab40c8e44
+
+            <h1><a href="index.html">Act4Kids</a></h1>
+
           </div>
           <div id="logo_menu">
             <div class="button_default">
@@ -59,7 +59,7 @@
 					<td>To prevent and treat child abuse and neglect. </td>
 					<td>All kids have a safe and happy childhood, free from abuse and neglect </td>
 					<td>We are a professional, ethical team who is caring, courageous and collaborative. </td>
-					
+					</tr>
 					</tbody>
 					</table>
     			</div>
