--- a/src/donate.html
+++ b/src/donate.html
@@ -9,10 +9,10 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+			<img src="bear logo.png" alt="bear logo" height=100px width=100px /img>
           </div>
           <div id="logo_title">
-            <h1><a href="index.html">Act4Kidz</a></h1>
+            <img src="title.png" alt="Act For Kids" height=100px width=300px /img align=left>
           </div>
           <div id="logo_menu">
             <div class="button_default">
