--- a/src/About.html
+++ b/src/About.html
@@ -68,7 +68,7 @@
     				<div class="title">
     					<h2></h2>
     					<span class="byline"></span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<span class="image image-full"><img src="" alt="" /></span>
     				<p> </p>
     			</div>
     		</div>
