--- a/src/About.html
+++ b/src/About.html
@@ -8,14 +8,10 @@
       <div id="header">
         <div id="logo_bar">
           <div id="logo_img">
-          <img src="bear logo.png" alt="bear logo" height=100px width=100px /img>
+          <img src="bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
           </div>
           <div id="logo_title">
-
-            <h1><a href="#"></a></h1>
-
-            <h1><a href="index.html">Act4Kids</a></h1>
-
+            <img src="title.png" alt="Act For Kids" height=100px width=300px /img align=left>
           </div>
           <div id="logo_menu">
             <div class="button_default">
@@ -48,8 +44,6 @@
     					<span class="byline">About us</span> </div>
     				
     				<p>Act for Kids is an Australian charity providing free therapy and support services to children and families who have experienced, or are at risk of child abuse and neglect. We have helped thousands of children and families for over 28 years. Act for Kids operates 22 centres with a team of over 300 staff from Adelaide all the way up to the Cape York Peninsula. Our services have expanded to include integrated therapy, support for vulnerable families, special workshops to empower kids and safe houses in remote Aboriginal communities. </p>
-					<br>
-					<br>
 					<table>
 					<tbody>
 					<tr>
@@ -64,12 +58,13 @@
 					</tr>
 					</tbody>
 					</table>
+    			</div>
     			<div class="article">
     				<div class="title">
-    					<h2></h2>
-    					<span class="byline"></span> </div>
+    					<h2>Pellentesque tristique ante</h2>
+    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p> </p>
+    				<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. </p>
     			</div>
     		</div>
     		<div id="sidebar">
