--- a/src/donate.html
+++ b/src/donate.html
@@ -9,7 +9,7 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-			<img src="bear logo.png" alt="bear logo" height=100px width=100px /img>
+			<img src="bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
           </div>
           <div id="logo_title">
             <img src="title.png" alt="Act For Kids" height=100px width=300px /img align=left>
