--- a/src/donate.html
+++ b/src/donate.html
@@ -41,7 +41,7 @@
     		<div id="content">
     			<div>
     				<div class="title">
-    					<h1>Please make a donation</h1>
+    					<h1>Please donate</h1>
     					<span class="byline">Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</span> </div>
 						<iframe id="iframeform" class="iframe" src="https://support.actforkids.com.au/iframe-donation-form" width="900" height="2500" frameborder="0" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt; </iframe>
     			</div>
