Updated sidebar on all pages

--- a/src/Services.html
+++ b/src/Services.html
@@ -8,7 +8,7 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+            <img id="logo_img" src="images\logo.png" alt="ACT4KIDZ Logo"/>
           </div>
           <div id="logo_title">
             <h1><a href="index.html">Act4Kidz</a></h1>
@@ -41,92 +41,74 @@
     			<div>
     				<div class="title">
     					<h2>Help Services</h2>
-    					<span class="byline">Act for Kids proudly offers support services to both children and their families!</span> </div>
+    					<span class="byline">Act for Kids proudly offers support services to both children and their families!</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different services.</p>
     			</div>
-
-
-
-				<!-- Services -->
-
-
-
+				  <!-- Services -->
     			<div class="article">
     				<div class="title">
     					<h2>Integrated Therapy Service</h2>
-    					<span class="byline">Therapeutic Service for childfren,young people, families and/or carers</span> </div>
+    					<span class="byline">Therapeutic Service for childfren,young people, families and/or carers</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
-				<div class="article">
+          <div class="article">
     				<div class="title">
     					<h2>Intensive Family Support</h2>
-    					<span class="byline">Provides Case Management Support</span> </div>
+    					<span class="byline">Provides Case Management Support</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
-				<div class="article">
+				  <div class="article">
     				<div class="title">
     					<h2>Early Education Program (EEP)</h2>
-    					<span class="byline">Educational intervention service for kids struggling to start school due to abuse or neglect</span> </div>
+    					<span class="byline">Educational intervention service for kids struggling to start school due to abuse or neglect</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
-    			</div>
-				<div class="article">
+          </div>
+          <div class="article">
     				<div class="title">
     					<h2>SafeKIDS</h2>
-    					<span class="byline">Provides safe and culturally appropriate home environments for kids</span> </div>
+    					<span class="byline">Provides safe and culturally appropriate home environments for kids</span>
+            </div>
     				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
     				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)  </p>
     			</div>
     		</div>
-
-
-
-			<!--- Side Bar -->
-
-
-
-    		<div id="sidebar">
-    			<div class="box1">
-    				<div class="title">
-    					<h2>Navigation</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Home</a></li>
-    					<li><a href="#">About</a></li>
-    					<li><a href="#">Contacts</a></li>
-    					<li><a href="#">Donations</a></li>
-    					<li><a href="#">Services</a></li>
-    				</ul>
-    			</div>
-    			<div class="box2">
-    				<div class="title">
-    					<h2>Contact Us</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Donations</a></li>
-    					<li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
-    					<li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
-    					<li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
-    					<li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
-    				</ul>
-    			</div>
-    			<div class="box3">
-    				<div class="title">
-    					<h2>Mauris vulputate</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    				</ul>
-    			</div>
-    		</div>
-    	</div>
+			  <!--- Side Bar -->
+        <div id="sidebar">
+          <div id="page-links">
+            <div>
+                <h2>Navigation</h2>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
+            </ul>
+          </div>
+          <div id="social-links">
+            <div>
+                <h2>Contact Us</h2>
+            </div>
+            <ul>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
+                <li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
+                <li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
+                <li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="copyright">
     	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
