--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -8,7 +8,7 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+            <img id="logo_img" src="images\logo.png" alt="ACT4KIDZ Logo"/>
           </div>
           <div id="logo_title">
             <h1><a href="index.html">Act4Kidz</a></h1>
@@ -53,47 +53,34 @@
     				<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. </p>
     			</div>
     		</div>
-    		<div id="sidebar">
-    			<div class="box1">
-    				<div class="title">
-    					<h2>Mauris vulputate</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    					<li><a href="#">Semper mod quisturpis nisi</a></li>
-    				</ul>
-    			</div>
-    			<div class="box2">
-    				<div class="title">
-    					<h2>Integer gravida</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    					<li><a href="#">Ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    				</ul>
-    			</div>
-    			<div class="box3">
-    				<div class="title">
-    					<h2>Mauris vulputate</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    				</ul>
-    			</div>
-    		</div>
-    	</div>
+        <div id="sidebar">
+          <div id="page-links">
+            <div>
+                <h2>Navigation</h2>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
+            </ul>
+          </div>
+          <div id="social-links">
+            <div>
+                <h2>Contact Us</h2>
+            </div>
+            <ul>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
+                <li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
+                <li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
+                <li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="copyright">
     	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
