--- a/src/Services.html
+++ b/src/Services.html
@@ -63,7 +63,7 @@
     				<div class="title">
     					<h2>Integrated Therapy Services</h2>
     					<span class="byline">Therapeutic Service for children,young people, families and/or carers</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<span class="image image-full"><img src="images/IntegratedTherapyServices.jpg" alt="" /></span>
     				<p>The Integrated Therapy Service (ITS) is a therapeutic service for children, young people, their families and/or carers who have behavioural, emotional and/or developmental difficulties due to trauma from abuse and neglect or who are at risk of harm. A full integrated team comprises of speech and language therapists, occupational therapists and psychologists.</p>
 					<p><strong>Speech Therapy</strong></p>
 					<p>Speech Pathologists help with communication, language and speech skills.  This includes how children and young people understand and use language, and the impact that any difficulties may have upon relationships, learning and emotional adjustment.</p>
@@ -87,7 +87,7 @@
     				<div class="title">
     					<h2>Intensive Family Support</h2>
     					<span class="byline">Provides Case Management Support</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<span class="image image-full"><img src="images/FamilyIntervention.jpg" alt="" /></span>
     				<p>Intensive Family Support (IFS) programs provide case management support to families at risk of entering the statutory child protection system. The IFS services accepts eligible referrals from the Family and Child Connect, Department of Child Safety, prescribed entities, community agencies and self-referrals from families.</p>
 					<p>IFS services can take referrals without consent from the Department of Child Safety and other prescribed entities. Referrals into this service must demonstrate the referred family has multiple and complex needs, has a child/ren under 18, are at risk of entering the child protection system if support is not obtained and would benefit from a case management service.</p>
 					<p>Depending on the service size, our intensive support services can also include allied health practitioners, in– home support workers, cultural advisors and specialist domestic and family violence practitioners.</p>
@@ -112,7 +112,7 @@
     				<div class="title">
     					<h2>Early Education Program (EEP)</h2>
     					<span class="byline">Educational intervention service for kids struggling to start school due to abuse or neglect</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<span class="image image-full"><img src="images/EarlyEducationProgram.jpg" alt="" /></span>
     				<p>The Early Education Program (EEP) is a unique pre-school educational intervention service for children who struggle to attain skills necessary to start school as a result of abuse or neglect.</p>
 					<p>The Townsville, Brisbane and Cairns program was developed through a partnership between Act for Kids and Education Queensland. The teachers are a part of the Townsville, Brisbane and Cairns teams and work closely with practitioners in these centres to integrate interventions specific to individual children into the curriculum.</p>
 					<p>The EEP is open four days a week and children aged 2–5 years attend full or half days at the pre-school learning the skills they need for primary school.</p>
@@ -126,7 +126,8 @@
     				<div class="title">
     					<h2>SafeKIDS</h2>
     					<span class="byline">Provides safe and culturally appropriate home environments for kids</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<span class="image image-full"><img src="images/SafeKIDS.jpg" alt="" /></span>
+					
     				<p>Many Aboriginal children and young people under child protection orders or investigation are placed in care outside of their communities making maintaining family, community and cultural connections impossible.</p>
 					<p><strong>Locations</strong></p>
 					<p>In partnership with The Aboriginal Corporation of West Coast Cape York Peninsula Traditional Land Owners (WCTO) and the Department of Communities, Child Safety and Disability Services, Act for Kids operates safe houses in Aurukun, Kowanyama, Napranum and Pormpuraaw.</p>
@@ -168,21 +169,8 @@
     					<li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
     					<li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
     				</ul>
-    			</div>
-    			<div class="box3">
-    				<div class="title">
-    					<h2>Mauris vulputate</h2>
-    				</div>
-    				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    				</ul>
-    			</div>
-    		</div>
-    	</div>
+    			</div>	
+				</div>
     </div>
     <div id="copyright">
     	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
