--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
     	</div>
     </div>
     <div id="copyright">
-    	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+   	<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
     </div>
   </body>
 </html>
