--- a/src/donate.html
+++ b/src/donate.html
@@ -9,10 +9,10 @@
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+			<img src="bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
           </div>
           <div id="logo_title">
-            <h1><a href="index.html">Act4Kidz</a></h1>
+            <img src="title.png" alt="Act For Kids" height=100px width=300px /img align=left>
           </div>
           <div id="logo_menu">
             <div class="button_default">
@@ -41,41 +41,42 @@
     		<div id="content">
     			<div>
     				<div class="title">
-    					<h1>Please make a donation</h1>
+    					<h1>Please donate</h1>
     					<span class="byline">Every little bit helps. Act for Kids relies heavily on donations to support our intensive therapy programs for kids who have experienced abuse and neglect, and early support for families at risk. Your donation will help us keep our doors open and expand our services – our kids can’t thank you directly, but know you’ve made a big difference to little lives.</span> </div>
 						<iframe id="iframeform" class="iframe" src="https://support.actforkids.com.au/iframe-donation-form" width="900" height="2500" frameborder="0" scrolling="no">&lt;br /&gt; iFrame not supported.&lt;br /&gt; </iframe>
     			</div>
     		</div>
-			<div id="sidebar">
-                <div class="box1">
-                    <div class="title">
-                        <h2>Navigation</h2>
-                    </div>
-                    <ul class="style2">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">Donations</a></li>
-                        <li><a href="#">Services</a></li>
-                    </ul>
-                </div>
-                <div class="box2">
-                    <div class="title">
-                        <h2>Contact Us</h2>
-                    </div>
-                    <ul class="style2">
-                        <li><a href="#">Donations</a></li>
-                        <li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
-                        <li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
-                        <li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
-                    </ul>
-                </div>
-    		</div>
+			  <div id="sidebar">
+          <div id="page-links">
+            <div>
+                <h2>Navigation</h2>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
+            </ul>
+          </div>
+          <div id="social-links">
+            <div>
+                <h2>Contact Us</h2>
+            </div>
+            <ul>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
+                <li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
+                <li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
+                <li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
+            </ul>
+          </div>
+        </div>
     	</div>
     </div>
     <div id="copyright">
-    	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    	<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
     </div>
   </body>
 </html>
