--- a/src/About.html
+++ b/src/About.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act4Kidz</title>
+    <title>Act for Kids</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
@@ -11,7 +11,7 @@
             <h1>This is a logo</h1>
           </div>
           <div id="logo_title">
-            <h1><a href="#">Act4Kidz</a></h1>
+            <h1><a href="#">Act for Kids</a></h1>
           </div>
           <div id="logo_menu">
             <div class="button_default">
