--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Act4Kidz</title>
+    <title>Act for Kids</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
@@ -8,10 +8,10 @@
     	<div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <h1>This is a logo</h1>
+           <img src="bear logo.png" alt="bear logo.png" height=100px width=100px/>
           </div>
           <div id="logo_title">
-            <h1><a href="#">Act4Kidz</a></h1>
+            <img src="title.png" alt="title.png" height=100px width=500px/>
           </div>
           <div id="logo_menu">
             <div class="button_default">
@@ -48,56 +48,31 @@
     		<div id="content">
     			<div>
     				<div class="title">
-    					<h2>Welcome to our website</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+						<img src="picture 6.jpg" alt="picture 6.jpg" height=500px width=1300/>
+						<div class="slider_content">
+    					<h1>Contact Us</h1>
+    					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
+general inquiry about making a donation please contact us below.</span> </div>
     			</div>
     			<div class="article">
-    				<div class="title">
-    					<h2>Pellentesque tristique ante</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. </p>
+    				<div class="title"
     			</div>
     		</div>
     		<div id="sidebar">
     			<div class="box1">
     				<div class="title">
-    					<h2>Mauris vulputate</h2>
     				</div>
     				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    					<li><a href="#">Semper mod quisturpis nisi</a></li>
     				</ul>
     			</div>
     			<div class="box2">
-    				<div class="title">
-    					<h2>Integer gravida</h2>
-    				</div>
     				<ul class="style2">
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-    					<li><a href="#">Ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
     				</ul>
     			</div>
     			<div class="box3">
     				<div class="title">
-    					<h2>Mauris vulputate</h2>
     				</div>
-    				<ul class="style2">
-    					<li><a href="#">Semper mod quis eget mi dolore</a></li>
-    					<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-    					<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-    					<li><a href="#">Consequat etiam lorem phasellus</a></li>
-    					<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+    				<ul class="style2"
     				</ul>
     			</div>
     		</div>
