--- a/src/contact.html
+++ b/src/contact.html
@@ -1,17 +1,17 @@
 <html>
   <head>
-    <title>Act for Kids</title>
+    <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
     <div id="wrapper">
-    	<div id="header">
+      <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-           <img src="bear logo.png" alt="bear logo.png" height=100px width=100px/>
+            <img id="logo_img" src="images\logo.png" alt="ACT4KIDZ Logo"/>
           </div>
           <div id="logo_title">
-            <img src="title.png" alt="title.png" height=100px width=500px/>
+            <h1><a href="index.html">Act4Kidz</a></h1>
           </div>
           <div id="logo_menu">
             <div class="button_default">
@@ -21,20 +21,18 @@
             </div>
             <div class="button_donate" class="button_default">
               <ul class="link">
-        				<li><a href="#" title="">Donate</a></li>
+        				<li><a href="donate.html" title="">Donate</a></li>
         			</ul>
             </div>
           </div>
     		</div>
     		<div class="navbar">
-          <ul class="navbar">
-            <li class="navbar"><a href="#home">Home</a></li>
-            <li class="navbar"><a href="#about">About</a></li>
-            <li class="navbar"><a href="#contacts">Contacts</a></li>
-            <li class="navbar"><a href="#donations">Donations</a></li>
-			<li class="navbar"><a href="#donations">Services</a></li>
-              </div>
-            </li>
+          <ul id="navbar" class="navbar">
+            <li class="navbar"><a href="index.html">Home</a></li>
+            <li class="navbar"><a href="about.html">About</a></li>
+            <li class="navbar"><a href="contact.html">Contacts</a></li>
+            <li class="navbar"><a href="donate.html">Donations</a></li>
+            <li class="navbar"><a href="services.html">Services</a></li>
           </ul>
     		</div>
     	</div>
@@ -42,39 +40,50 @@
     		<div id="content">
     			<div>
     				<div class="title">
-						<img src="picture 6.jpg" alt="picture 6.jpg" height=500px width=1300/>
-						<div class="slider_content">
-    					<h1>Contact Us</h1>
-    					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
-general inquiry about making a donation please contact us below.</span> </div>
-						<div><b>Call 1300 228 000 or Send us an email to mail@actforkids.com.au</b></div>
+    					<h2>Welcome to our website</h2>
+    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
     			</div>
     			<div class="article">
-    				<div class="title"
+    				<div class="title">
+    					<h2>Pellentesque tristique ante</h2>
+    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
+    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
+    				<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. </p>
     			</div>
     		</div>
-    		<div id="sidebar">
-    			<div class="box1">
-    				<div class="title">
-    				</div>
-    				<ul class="style2">
-    				</ul>
-    			</div>
-    			<div class="box2">
-    				<ul class="style2">
-    				</ul>
-    			</div>
-    			<div class="box3">
-    				<div class="title">
-    				</div>
-    				<ul class="style2"
-    				</ul>
-    			</div>
-    		</div>
+        <div id="sidebar">
+          <div id="page-links">
+            <div>
+                <h2>Navigation</h2>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="sponsors.html">Sponsors</a></li>
+            </ul>
+          </div>
+          <div id="social-links">
+            <div>
+                <h2>Contact Us</h2>
+            </div>
+            <ul>
+                <li><a href="donate.html">Donations</a></li>
+                <li><a href="https://www.facebook.com/ActforKids/">Facebook</a></li>
+                <li><a href="https://twitter.com/ACTforKids">Twitter</a></li>
+                <li><a href="https://www.instagram.com/actforkids/">Instagram</a></li>
+                <li><a href="https://www.youtube.com/user/ACTforKids">YouTube</a></li>
+            </ul>
+          </div>
+        </div>
     	</div>
     </div>
     <div id="copyright">
-    	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+   	<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
     </div>
   </body>
 </html>
