--- a/src/services.html
+++ b/src/services.html
@@ -53,8 +53,8 @@
     				<div class="title">
     					<h2>Help Services</h2>
     					<span class="byline">Act for Kids proudly offers a range of support services to both children and their families!</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different services.</p>
+    				<span class="image image-full"><img src="images/HelpingChildren.jpg" alt="" /></span>
+    				<p>Act for kids is an organisation dedicated to making kids lives better, and to do this we offer many different service ranging from therapy from abuse and neglect trauma to providing safe homes for those under child protection orders.</p>
     			</div>
 
 
