--- a/src/donate.html
+++ b/src/donate.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-	<link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon">
     <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="wrapper">
