global header done

--- a/src/contact.html
+++ b/src/contact.html
@@ -2,16 +2,17 @@
   <head>
     <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="wrapper">
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <img id="logo_img" src="images\logo.png" alt="ACT4KIDZ Logo"/>
+            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
           </div>
           <div id="logo_title">
-            <h1><a href="index.html">Act4Kidz</a></h1>
+            <img src="images\title.png" alt="Act For Kids" height=100px width=300px /img align=left>
           </div>
           <div id="logo_menu">
             <div class="button_default">
