--- a/src/about.html
+++ b/src/about.html
@@ -1,17 +1,18 @@
 <html>
   <head>
-    <title>Act4Kids</title>
+    <title>Act4Kidz</title>
     <link href="Styles.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="shortcut icon" href="images\favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="wrapper">
       <div id="header">
     		<div id="logo_bar">
           <div id="logo_img">
-            <img src="images/bear logo.png" alt="bear logo" height=100px width=100px align=left />
+            <img src="images\bear logo.png" alt="bear logo" height=100px width=100px /img align=left>
           </div>
           <div id="logo_title">
-            <img src="images/title.png" alt="Act For Kids" height=100px width=300px /img align=left>
+            <img src="images\title.png" alt="Act For Kids" height=100px width=300px /img align=left>
           </div>
           <div id="logo_menu">
             <div class="button_default">
