--- a/src/services.html
+++ b/src/services.html
@@ -44,6 +44,7 @@
             <li class="navbar"><a href="contact.html">Contacts</a></li>
             <li class="navbar"><a href="donate.html">Donations</a></li>
             <li class="navbar"><a href="services.html">Services</a></li>
+		    <li class="navbar"><a href="sponsors.html">Sponsors</a></li>
           </ul>
     		</div>
     	</div>
