2nd Navbar Update

--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -42,7 +42,7 @@
     		<div id="content">
     			<div>
     				<div class="title">
-						<img src="picture 6.jpg" alt="picture 6.jpg" height=500px width=1300/>
+						<img src="images/picture 6.jpg" alt="picture 6.jpg" height=500px width=1300/>
 						<div class="slider_content">
     					<h1>Contact Us</h1>
     					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
