--- a/src/contact.html
+++ b/src/contact.html
@@ -41,17 +41,11 @@
     		<div id="content">
     			<div>
     				<div class="title">
-    					<h2>Welcome to our website</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p>This is <strong>Scenic Office</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-    			</div>
-    			<div class="article">
-    				<div class="title">
-    					<h2>Pellentesque tristique ante</h2>
-    					<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-    				<span class="image image-full"><img src="images/pic01.jpg" alt="" /></span>
-    				<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo. </p>
+    					<img src="images/picture 6.jpg" alt="picture 6.jpg" height=500px width=1300/>
+						<div class="slider_content">
+    					<h1>Contact Us</h1>
+    					<span class="byline">If you are a donor and would like to update your personal information, make a donation or you have a
+general inquiry about making a donation please contact us below.</span>
     			</div>
     		</div>
         <div id="sidebar">
