Finalise copyright info

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -100,7 +100,7 @@
     	</div>
     </div>
     <div id="copyright">
-    	<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+    	<p>&copy; Copyright 2017 Act for Kids. All rights reserved | ABN 98 142 986 767 |</a>.</p>
     </div>
   </body>
 </html>
